panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__struct__test_error_braced_init_of_struct_with_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/struct/test_error_braced_init_of_struct_with_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/struct/test_error_braced_init_of_struct_with_struct.c"
   (struct Struct~0
      (member x `int`)
      (member y `int`)
      (member z `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (struct Struct~0
            (member x `int`)
            (member y `int`)
            (member z `int`))
         (declaration value~3 `struct Struct~0 complete`
            (braced
               1
               2
               3))
         (struct Struct~0
            (member x `int`)
            (member y `int`)
            (member z `int`))
         (declaration copy~4 `struct Struct~0 complete`
            (braced
               (name value~3 `struct Struct~0 complete`))))))

----- stderr -----
