panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__struct__test_error_too_many_subobjects.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/struct/test_error_too_many_subobjects.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/struct/test_error_too_many_subobjects.c"
   (struct T~0
      (member x `int`)
      (member y `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration t~3 `struct T~0 complete`
            (braced
               1
               2
               3)))))

----- stderr -----
